[package]
name = "libregexp-sys"
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/hyf0/libregexp-sys"
description = "Bindings for the libregexp of QuickJS"
keywords = ["quickjs", "regex", "libregexp"]

links = "libregexp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"